# df_to_azure

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  main.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: check_reqs.yaml  ci.yaml  codeql-analysis.yml  pypi.yaml
data/: category_1.csv  category_2.csv  employee_1.csv  employee_2.csv  employee_duplicate_keys_1.csv  employee_duplicate_keys_2.csv  salesfoce_opportunity_merged.pickle  sample_1.csv  sample_2.csv  sample_3.csv
df_to_azure/: __init__.py  adf.py  db.py  exceptions.py  export.py  functions.py  log.py  parse_settings.py  requirements-dev.txt  settings.py  tests.py  utils.py
df_to_azure/tests/: __init__.py  test_append.py  test_checks.py  test_create.py  test_df_to_azure.py  test_general.py  test_parquet.py  test_upsert.py  test_zz_clean_up.py
settings/: settings_template.yml
settings/templates/: adf_settings.yml  azure_settings.yml  run_settings.yml
src/: adf.py  export.py  functions.py  log.py  parse_settings.py
