[metadata]
name = df_to_azure
version = 0.8.0-rc.1
author = Melvin Folkers, Erfan Nariman
author_email = melvin@zypp.io, erfan@zypp.io
description = Automatically write pandas DataFrames to SQL by creating pipelines in Azure Data Factory with copy activity from blob to SQL
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, azure, data-warehouse, sql, blob
url = https://github.com/zypp-io/df_to_azure
project_urls =
    Bug Tracker = https://github.com/zypp-io/df_to_azure/issues
    Source = https://github.com/zypp-io/df_to_azure
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = df_to_azure
python_requires = >=3.7
install_requires =
    azure-identity==1.6.0
    azure-mgmt-datafactory==1.1.0
    azure-mgmt-resource==19.0.0
    azure-storage-blob==12.8.1
    pandas==1.3.2
    pyarrow==5.0.0
    pyodbc==4.0.31
    sqlalchemy==1.4.22


[flake8]
statistics = True
count = True
max-complexity=12
max-line-length=120
per-file-ignores=__init__.py: F401
