[metadata]
name = df_to_azure
version = 1.0.1
author = Zypp
author_email = hello@zypp.io
description = Automatically write pandas DataFrames to SQL by creating pipelines in Azure Data Factory with copy activity from blob to SQL
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, azure, data-warehouse, sql, blob
url = https://github.com/zypp-io/df_to_azure
project_urls =
    Bug Tracker = https://github.com/zypp-io/df_to_azure/issues
    Source = https://github.com/zypp-io/df_to_azure
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = df_to_azure
python_requires = >=3.9
install_requires =
    azure-identity>=1.12.0
    azure-mgmt-datafactory>=7.1.0
    azure-mgmt-resource>=23.1.1
    azure-storage-blob>=12.20.0
    pandas>=2.2.2
    pyarrow>=16.1.0
    pyodbc>=5.1.0
    sqlalchemy>=2.0.30




[flake8]
statistics = True
count = True
max-complexity=12
max-line-length=120
per-file-ignores=__init__.py: F401
